objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>Reason for rejected status</description>
        <label>Rejected Reason</label>
        <picklist>
            <controllingField>Lead_State__c</controllingField>
            <picklistValues>
                <fullName>Wrong Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason in Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Method__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Priority__c</fullName>
        <description>Response Priority
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Product_Line_1__c</fullName>
        <description>Product Line 1
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Product_Line_2__c</fullName>
        <description>Product Line 2
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Product_Line_3__c</fullName>
        <description>Product Line 3
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Product_Quantity_1__c</fullName>
        <description>Response Product Quantity 1
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Quantity 1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Product_Quantity_2__c</fullName>
        <description>Response Product Quantity 2
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Quantity 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Product_Quantity_3__c</fullName>
        <description>Response Product Quantity 3
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Product Quantity 3</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Response Urgent
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Response Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_AccountID__c</fullName>
        <label>SFDC AccountID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ContactID__c</fullName>
        <label>SFDC ContactID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SafariGuide_Link__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>SafariGuide Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Siebel_Campaign_Row_ID_Most_Recent__c</fullName>
        <description>SFDC R2.0_Ramzil_26/07/2012: 
Added field as per the new data model</description>
        <label>Siebel Campaign Row ID - Most Recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Campaign_Subject_Most_Recent__c</fullName>
        <description>SFDC R2.0_Ramzil_26/07/2012: 
Added field as per the new data model</description>
        <label>Siebel Campaign Subject - Most Recent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Lead_Created_Date__c</fullName>
        <label>Siebel Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SizeBand__c</fullName>
        <formula>IF( AnnualRevenue &lt; 10000 , &quot;Very Small&quot;, 
IF( AnnualRevenue &lt; 40000 , &quot;Small&quot;, 
IF( AnnualRevenue &lt; 100000 , &quot;Medium&quot;, 
IF( AnnualRevenue &lt; 250000 , &quot;Extra Medium&quot;, 
IF( AnnualRevenue &lt; 1000000 , &quot;Large&quot;, 
&quot;Oh My Goodness&quot;) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Size Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standardized_Title__c</fullName>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3215</description>
        <label>Standardized Title</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Architecture Officer (CAO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Commercial Officer (CCO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Compliance Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer (CEO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer (CFO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Officer (CIO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Security Officer (CISO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer (CMO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer (COO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Security Officer (CSO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Technology Officer (CTO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Data Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Fraud/Assurance/Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Information Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Mgr, Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_BU__c</fullName>
        <description>CR-0120-Julalin-Maintaining privacy setting with CID Person</description>
        <label>Sub BU</label>
        <picklist>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Critical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Notebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Notebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DesignJet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solutions Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPES Other GBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Storage Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJ Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IJ Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Std Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other ESS Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workstations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TBD_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Run Assignment Flag
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Run Assignment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tactic_Code__c</fullName>
        <description>Tactic Code
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Tactic ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tactic_Comments__c</fullName>
        <description>Tactic Comments
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Tactic Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tactic_Name__c</fullName>
        <description>Tactic Name
SFDC R2.0_Rahul_16/07/2012: New field is created as per the requirement #</description>
        <label>Tactic Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe_to_Buy_1__c</fullName>
        <description>Timeframe to Buy the product</description>
        <label>Timeframe to Buy</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 1 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Touch_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Touch Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treatment_Code__c</fullName>
        <description>SFDC R2.0_07/25/2012: New field is created as per the requirement #</description>
        <label>Treatment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_ID__c</fullName>
        <label>Treatment ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_Name__c</fullName>
        <description>SFDC R2.0_07/23/2012: New field is created as per the requirement #</description>
        <label>Treatment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Response_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to flag &apos;urgent  response required&apos; on Lead record. Indicates need  for immediate follow-up to Lead Owner</description>
        <label>Urgent Response Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Closing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the User who changes Lead Status to Closed or who Closes  the Lead.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>User Closing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave_Code__c</fullName>
        <description>SFDC R2.0_07/25/2012: New field is created as per the requirement #</description>
        <label>Wave Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_ID__c</fullName>
        <description>SFDC R2.0_07/23/2012: New field is created as per the requirement #</description>
        <label>Wave ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willingness_to_Buy__c</fullName>
        <description>SFDC_R2_10/08/12: New field is created as per the requirement</description>
        <label>Willingness to Buy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkloadIncrement__c</fullName>
        <formula>IF( AnnualRevenue &lt; 10000 , 1, 
IF( AnnualRevenue &lt; 40000 , 2, 
IF( AnnualRevenue &lt; 100000 , 3, 
IF( AnnualRevenue &lt; 250000 , 4, 
5) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Increment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3YRTCO_Savings__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>3YRTCO Savings ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y3YRTCO_Savings__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>3YRTCO Savings (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?lid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on link to change following status</inlineHelpText>
        <label>Following on Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_count__c</fullName>
        <label>Twitter Follower count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_tweet__c</fullName>
        <label>Twitter Last tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(
&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeadsPartner</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>All Open and Working Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>Deal_Default</group>
            <group>PCLM_Default</group>
            <group>PCLM_English</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartnerChina</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>所有有效的销售线索</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Chinese_Simplified</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Bulgarian_bg</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Всички неактивни и работещи пот. Клиенти</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Bulgarian</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Czech_cs</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Všichni otevření a zprac. poten. zájemci</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Czech</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Danish_da</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Alle åbne og driftsdygtige leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Danish</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Dutch_nl_NL</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Alle geopende en werkende leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Dutch</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_English_en_GB</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>All Open and Working Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_English_UK</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Finnish_fi</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Kaikki avoimet ja toimivat liidit</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Finnish</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_French_fr</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Tous les prospects ouverts et en cours</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_French</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_German_de</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Alle offenen und aktiven Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_German</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeadsPartner_Greek_el</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Estimated_Budget__c</columns>
        <columns>Timeframe_to_Buy_1__c</columns>
        <columns>Product_Service_Solution__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Last_Modified_by_Partner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Working</value>
        </filters>
        <label>Όλοι οι ανοιχτοί υποψήφιοι πελάτες</label>
        <language>en_US</language>
        <sharedTo>
            <group>PCLM_Greek</group>
            <group>PCLM_admin_team</group>
        </sharedTo>
    </listViews>
</CustomObject>